# Zendron

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  Zendron.code-workspace  bumpver.toml  delete.html  delete.md  dendron.code-workspace  dendron.yml  dendronrc.yml  index.html  package.json  pyproject.toml  result.json  root.md  setup.cfg
.github/issues_templates/: bug_report.yml  config.yml
.github/workflows/: publish.yml  python-publish.yml  semantic-release.yaml
.hydra/: config.yaml  hydra.yaml  overrides.yaml
404/: index.html
500/: index.html
assets/ms_word_ref/: paper-insert-object-chapters-example.docx
assets/scripts/: create_python_test_file.py  delete_file_and_open_related.py  from_src_open_related_note_and_test.py  open-external-terminal.sh  run_pyreverse.sh
conf/: __init__.py  config.yaml  config_cli.yaml  config_template.yaml  default.yaml
conf/zendron/: config.yaml  default.yaml
data/: dendron.json  fuse.json  notes.json  tree.json
data/meta/: 403.json  6u1xktarsxruj4ymnbay9iv.json  8fiufhe0ploe2egvvrullks.json  cblp5aoncbn1av54txaeaoq.json  j99hk7xxsxwmfyxtacp6xrd.json  jza9okhayjqrd1dxodtx92t.json  ndddbjatf8xuimxasit4bp1.json  o0ors2eqajshterw8ncjbjv.json  ocrlokjddjijfkav5gx3zwy.json  p6evbyfciaotkrkwav3ipra.json  pjsv58avultgzuafwoyw8za.json  pz0vbyamtaj2kfmon7zlk5u.json  qxsmv6iqaxlmjrhe8eypgps.json  remaetxg8rof9xlqhikqlcx.json  rgqsknpqcx55nvgkqekztfk.json  vz00dg1dgfoav7puepignmd.json
data/notes/: 6u1xktarsxruj4ymnbay9iv.html  6u1xktarsxruj4ymnbay9iv.md  8fiufhe0ploe2egvvrullks.html  8fiufhe0ploe2egvvrullks.md  cblp5aoncbn1av54txaeaoq.html  cblp5aoncbn1av54txaeaoq.md  j99hk7xxsxwmfyxtacp6xrd.html  jza9okhayjqrd1dxodtx92t.html  ndddbjatf8xuimxasit4bp1.html  o0ors2eqajshterw8ncjbjv.html  ocrlokjddjijfkav5gx3zwy.html  ocrlokjddjijfkav5gx3zwy.md  p6evbyfciaotkrkwav3ipra.html  p6evbyfciaotkrkwav3ipra.md  pjsv58avultgzuafwoyw8za.html  pz0vbyamtaj2kfmon7zlk5u.html  pz0vbyamtaj2kfmon7zlk5u.md  qxsmv6iqaxlmjrhe8eypgps.html  qxsmv6iqaxlmjrhe8eypgps.md  remaetxg8rof9xlqhikqlcx.html  rgqsknpqcx55nvgkqekztfk.html  vz00dg1dgfoav7puepignmd.html  vz00dg1dgfoav7puepignmd.md
notes/: Paper.md  compile_paper.sh  estimator.md  issues.configuration.md  issues.md  issuses.md  mjvolk3.tasks.future.md  mjvolk3.tasks.md  outline.md  paper.Abstract.md  paper.Conclusion.md  paper.Introduction.md  paper.Results-and-Discussion.md  paper.methods.md  paper.results-and-discussion.1.md  paper.results-and-discussion.2.md  paper.results-and-discussion.3.md  paper.results-and-discussion.4.md  paper.results-and-discussion.5.md  paper.results-and-discussion.6.md  paper.supplementary.md  paper.title.md  publish.md  publish.pdf.md  publish.word.md  readme.pypi.md  root-zendron.md  root.md  scratch.2024.02.17.140027.md  scratch.2024.03.08.133106.md  tags.Check.md  user.Mjvolk3.zendron.tasks.future.md  user.Mjvolk3.zendron.tasks.md  user.amaragraphframexsystematicevaluation2022.md  user.kipfVariationalGraphAutoEncoders2016.md  user.mjvolk3.md  user.mjvolk3.tasks.future.md  user.mjvolk3.tasks.md  user.nagelwhatitbe1974.md  user.user.Mjvolk3.zendron.tasks.future.md  (+32 more)
notes/1dw8hot9vdhml9x9l4wj1t9/: index.html
notes/1jz6ymjg5ms0p34cohzkddp/: index.html
notes/246wpv22f3s0ljv367bybrs/: index.html
notes/2fib55e8qqux9scimc7a9gn/: index.html
notes/2l3rlznkipoemsp0arda720/: index.html
notes/2ultsx7is5k0ytdugjbow6l/: index.html
notes/37tqxekttlmku940blxp6c7/: index.html
notes/390sq76s3o8ep4adxoqhyjx/: index.html
notes/3bgot52d1psalztauw89ii9/: index.html
notes/403/: index.html
notes/46hb04dyz2910h30x0lyoru/: index.html
notes/4e6fmcr59ecvyas9ozrhkou/: index.html
notes/5excb1b3qn779tz6628yaab/: index.html
notes/5mzcxt7yjk450eu5pzz086l/: index.html
notes/5q6r4siqcfyp2kvfz5ckpjb/: index.html
notes/bib/: bib_fix.bib
zendron/: __init__.py  __main__.py  annotations.py  cache.py  cache_deprecated.py  comments.py  comments_deprecated.py  config.py  date.py  dry_remove.py  front.py  init.py  items.py  load.py  load_since_cache.py  metadata.py  read_md.py  remove.py  scratch.py  sync.py  user_citation_key.py  zendron-resync-pypi.sh  zendron.py
(+191 files in other folders)
