# pyproject.toml

[build-system]
requires = ["setuptools>=67.7.2", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zendron"
version = "1.4.1"
description = "Import Zotero annotations with Dendron integration. https://github.com/Mjvolk3/Zendron"
readme = "README.md"
authors = [{ name = "Michael Volk", email = "michaeljvolk7@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["Zotero", "Dendron", "Markdown", "Notes", "Annotations", "VSCode"]
dependencies = [
    "hydra-core >= 1.3.1",
    "tqdm >= 4.64.1",
    "pyzotero >= 1.5.5",
    "tomli >= 2.0.1",
    "python-frontmatter >= 1.0.0",
    "html2text >= 2020.1.16",
    "Markdown >= 3.4.1",
    "markdownify >= 0.11.6",
    "importlib-metadata >= 6.6.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["black", "pip-tools", "pytest", "python-semantic-release", "build"]

[project.urls]
Homepage = "https://github.com/Mjvolk3/Zendron"

[project.scripts]
# zendron = "zendron.__main__:main"
zendron = "zendron.__main__:main"

[tool.setuptools.package-data]
torchcell = ["py.typed"]

[tool.setuptools.packages.find]
include = ["zendron*"]

# [options]
# packages = "find:"

# [options.package_data]
# zendron = ["*.yaml", "*.yml"]

[tool.semantic_release]
version_variables = [
    "pyproject.toml:version",
    "zendron/__init__.py:__version__",
]
branch = "main"
upload_to_pypi = "true"
commit_parser = "scipy"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
   "API", "DEP", "ENH", "REV", "BUG", "MAINT", "BENCH",
   "BLD", "DEV", "DOC", "STY", "TST", "REL", "FEAT", "TEST",
]
major_tags = ["API"]
minor_tags = ["DEP", "DEV", "ENH", "REV", "FEAT"]
patch_tags = ["BLD", "BUG", "MAINT"]